--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -53,8 +53,9 @@
    "source": [
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">mkdir build\n",
-    "<code style=\"background:black;color:white\">cd build\n",
-    "<code style=\"background:black;color:white\">ccmake ..</code>\n",
+    "cd build\n",
+    "ccmake ..\n",
+    "</code>\n",
     "</p>"
    ]
   },
@@ -73,7 +74,8 @@
    "source": [
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">make -j4\n",
-    "<code style=\"background:black;color:white\">make install </code>   \n",
+    "make install \n",
+    "</code>   \n",
     "</p>"
    ]
   },
