--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The dakota project provides software for optimisation and uncertainty quantification. \n",
     "\n",
-    "Dakotas parametric analyses can be used for a broad range of computational tasks as it enables design exploration, risk analysis, model calibration, and quantification of margins and uncertainty with computational models.\n",
+    "Dakota can be used for a broad range of computational tasks as it enables design exploration, risk analysis, model calibration, and quantification of margins and uncertainty with computational models.\n",
     "\n",
     "The intended use of Dakota is to aid computational methods developed to better understand the complex physical systems they simulate. In many cases these simulations are used to find the optimal design of a system, or to make prediction for systems that can not be directly tested. \n",
     "\n",
