updates done by Ross

--- a/notebooks/coding/Dakota.ipynb
+++ b/notebooks/coding/Dakota.ipynb
@@ -53,8 +53,14 @@
    "source": [
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">mkdir build\n",
-    "cd build\n",
-    "ccmake ..\n",
+    "</code>\n",
+    "</p>\n",
+    "<p style=\"background:black\">\n",
+    "<code style=\"background:black;color:white\">cd build\n",
+    "</code>\n",
+    "</p>\n",
+    "<p style=\"background:black\">\n",
+    "<code style=\"background:black;color:white\">ccmake ..\n",
     "</code>\n",
     "</p>"
    ]
@@ -74,8 +80,11 @@
    "source": [
     "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">make -j4\n",
-    "make install \n",
     "</code>   \n",
+    "</p>\n",
+    "<p style=\"background:black\">\n",
+    "<code style=\"background:black;color:white\">make install \n",
+    "</code>\n",
     "</p>"
    ]
   },
