--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -69,6 +69,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"background:black\">\n",
+    "<code style=\"background:black;color:white\">mkdir build\n",
+    "<code style=\"background:black;color:white\">cd build\n",
+    "<code style=\"background:black;color:white\">ccmake ..</code></code></code>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "On the window which appears,press the c key to run configure once. Once configured scroll to CMAKE-INSTALL-PREFIX and edit the variable to something memorable. (e.g /home/name/dakota) Pressthe c key again to configure and then the g key to exit back to the terminal.\n",
     "\n",
     "Once back in the terminal type the following to run dakota:"
