--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -69,10 +69,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "test\n",
     "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">mkdir build\n",
-    "<code style=\"background:black;color:white\">cd build\n",
-    "<code style=\"background:black;color:white\">ccmake ..</code></code></code>\n",
+    "<code style=\"background:black;color:white\">mkdir build <br>cd build<br>ccmake ..</code>\n",
     "</p>"
    ]
   },
