--- a/_sources/coding/Dakota.ipynb
+++ b/_sources/coding/Dakota.ipynb
@@ -52,25 +52,6 @@
    "metadata": {},
    "source": [
     "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">mkdir build\n",
-    "</code>\n",
-    "</p>\n",
-    "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">cd build\n",
-    "</code>\n",
-    "</p>\n",
-    "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">ccmake ..\n",
-    "</code>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test\n",
-    "<p style=\"background:black\">\n",
     "<code style=\"background:black;color:white\">mkdir build <br>cd build<br>ccmake ..</code>\n",
     "</p>"
    ]
@@ -89,12 +70,7 @@
    "metadata": {},
    "source": [
     "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">make -j4\n",
-    "</code>   \n",
-    "</p>\n",
-    "<p style=\"background:black\">\n",
-    "<code style=\"background:black;color:white\">make install \n",
-    "</code>\n",
+    "<code style=\"background:black;color:white\">make -j4 <br>make install</code>\n",
     "</p>"
    ]
   },
