--- a/_sources/geosciences/Climate_Model.ipynb
+++ b/_sources/geosciences/Climate_Model.ipynb
@@ -24,64 +24,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review of Some Basic Physics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Inverse Square Law\n",
-    "\n",
-    "Nuclear fusion within the Sun, converting hydrogen to helium, and releases energy in the form of electromagnetic (EM) radiation.\n",
-    "\n",
-    "The intensity of EM radiation incident on a body (I) from a source is inversely proportional to the square of the distance between the source and the body (d). \n",
-    "\n",
-    "EM radiation is emitted over 3 spatial dimensions, so it forms a sphere, and its intensity at the surface of this sphere is the power of the source divided by the surface area of that sphere.\n",
-    "\n",
-    "<img src=\"../images/isl.gif\"/>\n",
-    "\n",
-    "From this, the <b>energy flux density at the surface of the Earth</b> can be calculated from the power of the Sun $3.86$x$10^{26}W$ ($E_S$), and the distance between the Sun and the Earth $1.5$x$10^{11}m$ ($R$). \n",
-    "\n",
-    "$$S_o=\\frac{E_S}{4\\pi R^{2}}$$\n",
-    "\n",
-    "This is the <b>solar constant $S_o$</b>, which is roughly 1365 $Wm^{-2}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stefan Boltzmann Law\n",
-    "\n",
-    "A spectra of EM radiation is emitted from all bodies at temperature greater than absolute zero (0K or 273˚C). \n",
-    "\n",
-    "The <b>energy flux density</b> from the surface of that body <b>($M$)</b> is a function of the <b>absolute temperature</b> of that body <b>($T_K$)</b>.  \n",
-    "\n",
-    "$$M=σT_K^{4}$$\n",
-    "\n",
-    "where σ=<b>Stefan-Boltzmann constant</b>=$5.6697$x$10^{-8}Wm^{-2}K^{-4}$\n",
-    "\n",
-    "Note that this law assumes the energy source acts as a <b>blackbody</b> i.e. a hypothetical ideal radiator that totally absorbs all radiation incident on it (Note it does <b>NOT</b> mean the body only absorbs radiation). The body is in <b>radiative equilibrium</b>, i.e. <b>energy in = energy out</b>, when it emits blackbody radiation according to __[Planck's law](https://en.wikipedia.org/wiki/Planck%27s_law)__.\n",
-    "\n",
-    "<img src=\"../images/bbr.gif\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Albedo\n",
-    "\n",
-    "Albedo (α) is the <b>reflectance of an object over all wavelengths</b>, which measures how well a surface reflects EM radiation. Its value is between 0 and 1, for example 0.1 means 10% of EM radiation incident on the object is reflected, so 90% of it is absorbed.\n",
-    "\n",
-    "Therefore, albedo is higher for <b>ice and snow (0.9)</b> than that for <b>water (0.06)</b>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Heat Capacity\n",
     "\n",
     "Heat capacity (C) is the energy (E) required to raise the temperature of a body of a material by 1˚C, independent of mass.\n",
@@ -105,45 +47,53 @@
    "source": [
     "## An oversimplified model\n",
     "\n",
-    "Energy balance model is crucial in building a climate model, since atmospheric dynamics are driven by the input of energy into the climate system, so inaccurate energy balance model leads to wrong results. \n",
+    "The <b>energy flux density at the surface of the Earth</b> can be calculated from the __[inverse square law](https://en.wikipedia.org/wiki/Inverse-square_law#:~:text=In%20science%2C%20an%20inverse%2Dsquare,source%20of%20that%20physical%20quantity.)__, given the power of the Sun $3.86$x$10^{26}W$ ($E_S$), and the distance between the Sun and the Earth $1.5$x$10^{11}m$ ($R$): \n",
     "\n",
-    "Geared with the knowledge of EM radiation, Stefan-Boltzmann Law, and albedo, let's construct a simple model that calculates the temperature of the Earth.\n",
+    "$$S_o=\\frac{E_S}{4\\pi R^{2}}$$\n",
     "\n",
-    "To make the model simpler, there are several <b>assumptions</b> about Earth:\n",
+    "This is the <b>solar constant $S_o$</b>, which is roughly 1365 $Wm^{-2}$.\n",
+    "\n",
+    "Energy balance model is crucial in building a climate model, since atmospheric dynamics are driven by the input of energy into the climate system. \n",
+    "\n",
+    "Let's first make several <b>assumptions</b> about the Earth:\n",
     "1. It is a perfect blackbody\n",
     "2. Its albedo is 0.3, which is the average terrestrial albedo\n",
-    "3. It is in radiative equilibrium\n",
+    "3. It is in radiative equilibrium i.e. energy in = energy out\n",
     "4. Equal solar irradiation on the surface of the Earth\n",
+    "\n",
+    "Recall that albedo is the <b>reflectance of an object over all wavelengths</b>, which measures how well a surface reflects EM radiation. Its value is between 0 and 1, for example 0.1 means 10% of EM radiation incident on the object is reflected, so 90% of it is absorbed. Therefore, albedo is higher for <b>ice and snow (0.9)</b> than that for <b>water (0.06)</b>.\n",
     "\n",
     "From here, we can start by calculating the energy flux density on the surface of the Earth. \n",
     "\n",
-    "Cross-sectional area of the Earth = $A$; Earth radius = $R_E$; albedo = $α$ \n",
+    "Earth radius = $R_E$; albedo = $α$ \n",
     "\n",
-    "$$A=\\pi R_E^{2}$$\n",
+    "We already know the energy flux density at the surface of the Earth = the solar constant $S_o$, so the energy flux density including albedo becomes $S_oA(1-α)$. \n",
     "\n",
-    "We already know the energy flux density at the surface of the Earth = the solar constant $S_o$, so the energy flux = $S_oA$. Accounting for albedo, the energy flux becomes $S_oA(1-α)$. \n",
+    "Thus, the energy flux density into the Earth is:\n",
     "\n",
-    "Thus, the total amount of energy flux in is:\n",
+    "$$M_{in}=S_o(1-α)$$ \n",
     "\n",
-    "$$E_{in}=S_oA(1-α)$$ \n",
+    "In terms of total energy flux:\n",
     "\n",
-    "The energy flux density emitted is described by Stefan-Boltzmann Law:\n",
+    "$$E_{in}=S_o\\pi R_E^2(1-α)$$\n",
+    "\n",
+    "The energy flux density emitted is described by __[Stefan-Boltzmann Law](https://en.wikipedia.org/wiki/Stefan%E2%80%93Boltzmann_law)__:\n",
     "\n",
     "$$M_{out}=σ𝑇_K^{4}$$\n",
     "\n",
-    "Or in terms of total energy flux:\n",
+    "where σ=<b>Stefan-Boltzmann constant</b>=$5.6697$x$10^{-8}Wm^{-2}K^{-4}$, and $T_K$ is <b>absolute temperature</b>. In terms of total energy flux:\n",
     "\n",
-    "$$E_{out}=4\\pi R_E^{2}σ𝑇_K^{4}$$\n",
+    "$$E_{out}=4\\pi R_E^2σ𝑇_K^{4}$$\n",
     "\n",
-    "At radiative equilibrium, energy absorbed = energy emitted, thus:\n",
+    "At <b>radiative equilibrium</b>, energy absorbed = energy emitted, thus:\n",
     "\n",
-    "$$E_{in}=E_{out}=S_oA(1-α)=4\\pi R_E^{2}σ𝑇_K^{4}$$\n",
+    "$$E_{in}=E_{out}$$\n",
     "\n",
     "$$S_o\\pi R_E^2(1-α)=4\\pi R_E^{2}σ𝑇_K^{4}$$\n",
     "\n",
     "Eliminating $\\pi$ and $R_E$ gives:\n",
     "\n",
-    "$$\\frac{S_o(1-α)}{4}=σ𝑇_K^{4}$$\n",
+    "$$\\frac{S_o(1-α)}{4}=σ𝑇_K^{4}$$ \n",
     "\n",
     "Rearranging this equation gives the temperature at the surface of the Earth:\n",
     "\n",
@@ -250,9 +200,13 @@
     "\n",
     "Or in terms of total energy flux:\n",
     "\n",
-    "$$E_{out}=εσAT_K^{4}$$\n",
+    "$$E_{out}=4\\pi R_E^2εσT_K^{4}$$\n",
     "\n",
-    "Therefore:\n",
+    "Recall that $E_{in}=S_o\\pi R_E^2(1-α)$, and $E_{in}=E_{out}$:\n",
+    "\n",
+    "$$S_o\\pi R_E^2(1-α)=4\\pi R_E^2εσT_K^{4}$$\n",
+    "\n",
+    "Eliminating $\\pi$ and $R_E^2$ gives, and rearranging for $T_K$ gives:\n",
     "\n",
     "$$T_K=(\\frac{S_o(1-α)}{4εσ})^{\\frac{1}{4}}$$\n",
     "\n",
@@ -327,15 +281,19 @@
     "\n",
     "Substitute $T_K$ into Stefan-Boltzmann Law:\n",
     "\n",
-    "$$M=σT_K^{4}≈σ(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
+    "$$M_{out}=σT_K^{4}≈σ(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
     "\n",
     "In terms of total energy flux:\n",
     "\n",
-    "$$E=σ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
+    "$$E_{out}=σ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
     "\n",
     "Including emissivity:\n",
     "\n",
-    "$$E_{out}=εσ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))=4\\pi R_E^{2}(εσT_o^{4}+4εσT_o^{3}T_C)=4\\pi R_E^{2}(a+bT_C)$$\n",
+    "$$E_{out}=εσ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
+    "\n",
+    "$$=4\\pi R_E^{2}(εσT_o^{4}+4εσT_o^{3}T_C)$$\n",
+    "\n",
+    "$$=4\\pi R_E^{2}(a+bT_C)$$\n",
     "\n",
     "where $a=εσT_o^{4}$ and $b=4εσT_o^{3}$ are constants.\n",
     "\n",
@@ -343,9 +301,7 @@
     "\n",
     "b is temperature-dependent coefficient for longwave radiation $= 4εσT_o^{3}$ $Wm^{-2}˚C^{-1}$\n",
     "\n",
-    "Since $E_{in}=E_{out}$:\n",
-    "\n",
-    "$$S_oA(1-α)=4\\pi R_E^{2}(a+bT_C)$$\n",
+    "Since $E_{in}=E_{out}$ at radiative equilibrium:\n",
     "\n",
     "$$S_o\\pi R_E^2(1-α)=4\\pi R_E^{2}(a+bT_C)$$\n",
     "\n",
@@ -353,7 +309,7 @@
     "\n",
     "$$\\frac{1}{4}S_o(1-α)=a+bT_c$$\n",
     "\n",
-    "This gives the <b>energy flux density in and out of the Earth</b>.\n",
+    "In the equation above, LHS gives <b>energy flux density into the Earth</b>, and RHS gives <b>energy flux density out of the Earth</b>.\n",
     "\n",
     "Rearrange for $T_C$ gives:\n",
     "\n",
@@ -461,11 +417,13 @@
     "\n",
     "$$∆T_C = \\frac{∆M_{in}}{b}$$\n",
     "\n",
-    "The change in downgoing energy flux density associated with CO$_{2}$ gas of concentration [CO$_2$] compared to a base level concentration ot [CO$_2$]$_0$ can be approximated by:\n",
+    "Therefore, the change in temperature is proportional to <b>radiative forcing</b>, the difference in energy flux density going in and out of the Earth. \n",
+    "\n",
+    "The radiative forcing associated with CO$_{2}$ gas of concentration [CO$_2$] compared to a base level concentration ot [CO$_2$]$_0$ can be approximated by:\n",
     "\n",
     "$$∆M_{CO_2,in} = 5.35ln(\\frac{[CO_2]}{[CO_2]_0})$$\n",
     "\n",
-    "For a doubling of CO$_2$, the change in energy flux density would be:\n",
+    "For a doubling of CO$_2$, the radiative forcing would be:\n",
     "\n",
     "$$∆M_{CO_2,in} = 5.35ln(2) = 3.7 Wm^{-2}$$\n",
     "\n",
@@ -475,7 +433,7 @@
     "\n",
     "The change in temperature from doubling concentration of CO$_2$ compared to pre-industrial levels is <b>climate sensibility</b>. \n",
     "\n",
-    "Simplified approximations of change in radiative forcing caused by other greenhouse gases can be found in Table 3 in the paper __[Myhre et al.](https://en.wikipedia.org/wiki/Planck%27s_law)__."
+    "Simplified approximations of radiative forcing caused by other greenhouse gases can be found in Table 3 in the paper __[Myhre et al.](https://en.wikipedia.org/wiki/Planck%27s_law)__\n"
    ]
   },
   {
@@ -538,35 +496,19 @@
    "source": [
     "## Storing heat \n",
     "\n",
+    "Recall that heat capacity (C) is the energy (E) required to raise the temperature of a body of a material by 1˚C, independent of mass.\n",
+    "\n",
+    "$C=\\frac{E}{∆T}$ $J˚C^{-1}$\n",
+    "\n",
     "Given that most of the temperature change is due to the heat exchange with the top 70m layer of the ocean, we'll assume the contribution from land and deep ocean to heat storage is negligible, and that the ocean is 70m deep.\n",
     "\n",
-    "The density of seawater $ρ=1025kgm^{-3}$, specific heat capacity of water $c=4200Jkg^{-1}˚C^{-1}$, the fraction ($f$) which the Earth's surface is covered by ocean (70%), and depth of the ocean ($d$), we can calculate the effective heat capacity of the ocean:\n",
+    "The density of seawater $ρ=1025kgm^{-3}$, specific heat capacity of water $c=4200Jkg^{-1}˚C^{-1}$, the fraction ($f$) which the Earth's surface is covered by ocean (70%), and depth of the ocean ($d$), we can calculate the heat capacity of the ocean per meter squared:\n",
     "\n",
     "$$C=fρdc$$\n",
     "\n",
     "You can verify this by looking at the units.\n",
     "\n",
-    "Substituting in the numbers, the Earth's effective heat capacity is $2.11*10^{8}Jm^{-2}˚C^{-1}$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ocean's effective heat capacity is 2.11e+08 J/m2˚C\n"
-     ]
-    }
-   ],
-   "source": [
-    "def find_C(f, d, p=1025, c=4200):\n",
-    "    return f * d * p * c\n",
-    "\n",
-    "print(\"The ocean's effective heat capacity is %.2e J/m2˚C\" % (find_C(0.7, 70)))"
+    "Substituting in the numbers, the Earth's heat capacity is $2.11*10^{8}Jm^{-2}˚C^{-1}$."
    ]
   },
   {
@@ -579,7 +521,7 @@
     "\n",
     "Treating the climate system as an isolated system, the rate of change in internal energy of the climate system must be balanced by the rate of net heating or cooling.\n",
     "\n",
-    "Recall energy flux density absorbed $M_{in}=\\frac{1}{4}S_o(1-α)$, and energy flux density out $M_{out}=(a+bT_C)$, thus net heating/cooling is:\n",
+    "From above, we derived that energy flux density absorbed $M_{in}=\\frac{1}{4}S_o(1-α)$, and energy flux density out $M_{out}=(a+bT_C)$, thus net heating/cooling is:\n",
     "\n",
     "$$M_{in}-M_{out}=\\frac{1}{4}S_o(1-α)-(a+bT_C)$$ \n",
     "\n",
@@ -679,9 +621,9 @@
     "\n",
     "Assume that due to some perturbation: \n",
     "- the average temperature becomes lower than -10˚C, then the entire Earth freezes, albedo becomes 0.9\n",
-    "- the average temperature is between -10˚C and 10˚C, then the albedo is between 0.3 and 0.9, and this can be calculated with ratios:\n",
+    "- the average temperature is between -10˚C and 10˚C, then the albedo is between 0.3 and 0.9, and this can be calculated by using ratios:\n",
     "\n",
-    "$$α=α_{ice}-(α_{ice}-α_{land})*\\frac{T-T_{freeze}}{T_{melt}-T_{freeze}}$$\n",
+    "$$α=α_{ice}-(α_{ice}-α_{land})*\\frac{T_{now}-T_{freeze}}{T_{melt}-T_{freeze}}$$\n",
     "\n",
     "- the average temperare becomes higher than 10˚C, then the entire Earth's ice melts, albedo becomes 0.3\n",
     "\n",
@@ -778,7 +720,9 @@
    "source": [
     "## Final model\n",
     "\n",
-    "All the concepts above are included to produce this final model. For simplicity, we'll approximate that CO$_2$ is the only greenhouse gas present."
+    "Now, let's include all the concepts above into this final model.\n",
+    "\n",
+    "The initial conditions set are temperature of 14˚C and CO$_2$ concentration of 280ppm, but feel free to change them."
    ]
   },
   {
