--- a/_sources/geosciences/Climate_Model.ipynb
+++ b/_sources/geosciences/Climate_Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,18 +574,18 @@
     "    a = e * s * T_o**4\n",
     "    b = 4 * e * s * T_o**3\n",
     "    D = (0.25*S_o*(1-al)-a-T_initial*b)/(C)\n",
-    "    t = t*3600*24*365 # convert t from seconds to years\n",
+    "    t = t*3600*24*365 # convert t from years to seconds\n",
     "    return (1/b)*(0.25*S_o*(1-al)-a-C*D*np.exp(-b*t/C))\n",
     "\n",
     "initial_T = np.array([i for i in range(0, 41, 10)])\n",
     "\n",
     "t = np.array([i for i in range(20)])\n",
     "\n",
-    "T = {}\n",
+    "T = {} # store data in a dictionary\n",
     "for i in range(len(initial_T)):\n",
-    "    T['temp='+str(initial_T[i])]=[]\n",
+    "    T['temp='+str(initial_T[i])]=[] # indexed by temp = initial temperature\n",
     "    for j in range(len(t)):\n",
-    "        T['temp='+str(initial_T[i])].append(equilibrium_T(initial_T[i], t[j]))\n",
+    "        T['temp='+str(initial_T[i])].append(equilibrium_T(initial_T[i], t[j])) \n",
     "        \n",
     "    \n",
     "# set up figure\n",
@@ -722,12 +722,12 @@
     "\n",
     "Now, let's include all the concepts above into this final model.\n",
     "\n",
-    "The initial conditions set are temperature of 14˚C and CO$_2$ concentration of 280ppm, but feel free to change them."
+    "Note that initial conditions are set to temperature of 14˚C and CO$_2$ concentration of 280ppm. Feel free to change them and other variables in the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -745,29 +745,30 @@
    ],
    "source": [
     "def climate_model(final_co2, years, current_temp=14, current_co2=280, e=0.62, S_o=1365, T_o=273, s=5.67e-8, f=0.7, d=70, p=1025, c=4200):\n",
-    "    time = [0]\n",
-    "    temperature = [14]\n",
-    "    t = 0\n",
-    "    total_t = years\n",
-    "    al = 0.3\n",
-    "    dM_in = 5.35 * np.log(final_co2/current_co2)\n",
+    "    time = [0] # store data in list\n",
+    "    temperature = [current_temp]\n",
+    "    t = 0 # counter\n",
+    "    total_t = years \n",
+    "    al = 0.3 \n",
+    "    dM = 5.35 * np.log(final_co2/current_co2)\n",
     "    C = 0.7 * 70 * 1025 * 4200\n",
     "    a = e * s * T_o**4\n",
     "    b = 4 * e * s * T_o**3\n",
-    "    while t < total_t:\n",
+    "    while t < total_t: # initialise count\n",
     "        t += 1\n",
     "        time.append(t)\n",
     "        seconds = t * 3600 * 24 * 365.25\n",
+    "        # ice-albedo feedback + tipping points\n",
     "        if temperature[-1] <= -10:\n",
     "            al = 0.9\n",
     "        elif temperature[-1] >= 10:\n",
     "            al = 0.3\n",
     "        else:\n",
     "            al = 0.9 - (0.9-0.3)*(temperature[-1]+10)/(20)\n",
-    "        M_in = 0.25*S_o*(1-al) + dM_in\n",
-    "        D = (M_in-a-current_temp*b)/(C)\n",
-    "        temperature.append((1/b)*(M_in-a-C*D*np.exp(-b*seconds/C)))\n",
-    "    return time, temperature\n",
+    "        M = 0.25*S_o*(1-al) + dM # new energy flux density\n",
+    "        D = (M-a-current_temp*b)/(C) # find arbitrary constant D from initial conditions\n",
+    "        temperature.append((1/b)*(M-a-C*D*np.exp(-b*seconds/C))) # substitute into differential equation\n",
+    "    return time, temperature # output time and temperature data\n",
     "    \n",
     "\n",
     "time0, temperature0 = climate_model(10, 10)\n",
