--- a/notebooks/geosciences/Image_Transformations_and_Orthorectification.ipynb
+++ b/notebooks/geosciences/Image_Transformations_and_Orthorectification.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "# Image Transformations and orthorectification\n",
     "\n",
-    "A tranformation in itself is a function that maps one set to another set. Geometric image transformations are widely used for registration and removal of geometric distortion. Common applications include the construction of mosaics, geographical mapping, robotic vision, sattelite imagery, stereo imaging and video.\n",
+    "A transformation in itself is a function that maps one set to another set. Geometric image transformations are widely used for registration and removal of geometric distortion. Common applications include the construction of mosaics, geographical mapping, robotic vision, satellite imagery, stereo imaging and video.\n",
     "\n",
-    "This notebook aims to demonstrate how the basic transformations work and some of its uses"
+    "This notebook aims to demonstrate how the basic transformations work and some of its uses."
    ]
   },
   {
@@ -19,7 +19,7 @@
    "source": [
     "## Scaling\n",
     "\n",
-    "scaling is the resizing of an image. When scaling a vector graphic image, the image can be scaled using geometric transformations with no loss of image quality. when scaling a raster image, a new image with a higher or lower number of pixels must be generated. When decreasing the pixel number (scaling down) this usually results in a visible quality loss. An example of scaling a raster image is shown below"
+    "Scaling is the resizing of an image. When scaling a vector graphic image, the image can be scaled using geometric transformations with no loss of image quality. when scaling a raster image, a new image with a higher or lower number of pixels must be generated. When decreasing the pixel number (scaling down) this usually results in a visible quality loss. An example of scaling a raster image is shown below:"
    ]
   },
   {
@@ -227,9 +227,9 @@
    "source": [
     "# Affine Transformation\n",
     "\n",
-    "Affine transformation is a linear mapping methods that preserves points, straight lines, and planes. all parallel lines in the original image will still be parallel in the output image. To find the transformation matrix, we need three points from the input image and their corresponding location in the output image.\n",
+    "Affine transformation is a linear mapping method that preserves points, straight lines, and planes. all parallel lines in the original image will still be parallel in the output image. To find the transformation matrix, we need three points from the input image and their corresponding location in the output image.\n",
     "\n",
-    "Translatin, scale, shear and rotation are al affine transformations. "
+    "Translation, scale, shear and rotation are al affine transformations. "
    ]
   },
   {
@@ -340,11 +340,11 @@
    "source": [
     "# Perspective Transformation\n",
     "\n",
-    "Perspective transformation or orthorectificaiton removes effects from tilt in the image for the purpose of creating a planimetrically correct image. In other words it generates an image as if it was captured from the vertical (on-Nadir). \n",
+    "Perspective transformation or orthorectification removes effects from tilt in the image to create a planimetrically correct image. In other words, it generates an image as if it was captured from the vertical (on-Nadir). \n",
     "\n",
     "This can be done by multiple methods, some between many:\n",
-    "- if you can link image coordinates to real coordinates (or a made up system) it is a simple transform function to find\n",
-    "- if you know where the picture was taken from and the camera orientation you can also find the required parameters for a perspective transformatin\n",
+    "- if you can link image coordinates to real coordinates (or a made-up system) it is a simple transform function to find\n",
+    "- if you know where the picture was taken from and the camera orientation you can also find the required parameters for a perspective transformation\n",
     "\n",
     "This can be taken one step further to account for relief (terrain), requires DEM model, the resultant orthorectified image has a constant scale wherein features are represented in their 'true' positions. This allows for the accurate direct measurement of distances, angles, and areas. Note that if considering water surfaces on small scale relief has only a minor effect."
    ]
