--- a/_sources/geosciences/Climate_Model.ipynb
+++ b/_sources/geosciences/Climate_Model.ipynb
@@ -69,11 +69,11 @@
     "\n",
     "We already know the energy flux density at the surface of the Earth = the solar constant $S_o$, so the energy flux density including albedo becomes $S_oA(1-α)$. \n",
     "\n",
-    "Thus, the energy flux density into the Earth is:\n",
+    "Thus, the energy flux density ($Wm^{-2}$) into the Earth is:\n",
     "\n",
     "$$M_{in}=S_o(1-α)$$ \n",
     "\n",
-    "In terms of total energy flux:\n",
+    "In terms of total energy flux ($W$):\n",
     "\n",
     "$$E_{in}=S_o\\pi R_E^2(1-α)$$\n",
     "\n",
@@ -165,7 +165,7 @@
    "source": [
     "But the average temperature on Earth should be <b>14˚C</b>, a difference of 32˚C. Something must be seriously wrong.\n",
     "\n",
-    "Actually, the assumptions are not valid and are too simple.\n",
+    "Actually, some of the assumptions are not valid and are too simple.\n",
     "\n",
     "#### Assumption 1 \n",
     "\n",
@@ -173,17 +173,15 @@
     "\n",
     "#### Assumption 2 \n",
     "\n",
-    "70% of the Earth is covered by ocean, and albedo of the ocean is much lower than terrestrial albedo. On the other hand, a around 10% of land is covered by ice. Overall, albedo should be lower than 0.3.\n",
+    "Albedo = 0.3 is actually pretty accurate. As you'll see below, after accounting for the Earth being an imperfect blackbody, the surface temperature calculated is very sensible.\n",
     "\n",
     "#### Assumption 3\n",
     "\n",
-    "Equilibrium is disturbed by greenhouse effect, positive feedbacks, and other factors.\n",
+    "Equilibrium is easily disturbed, especially by <b>positive feedbacks</b>.\n",
     "\n",
     "#### Assumption 4 \n",
     "\n",
-    "The Earth is a sphere, so heat absorbtion (and heat emission) is not uniform.\n",
-    "\n",
-    "We'll now address some of the issues mentioned above."
+    "The Earth is a sphere, so heat absorbtion (and heat emission) is not uniform."
    ]
   },
   {
