omit derivation from first principles

--- a/notebooks/geosciences/Climate_Model.ipynb
+++ b/notebooks/geosciences/Climate_Model.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Constructing a zero-dimensional energy balance model"
+    "# Constructing a zero-dimensional energy balance model\n",
+    "\n",
+    "Material from this module is from Practical 1 in the Climate module."
    ]
   },
   {
@@ -18,27 +20,6 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Heat Capacity\n",
-    "\n",
-    "Heat capacity (C) is the energy (E) required to raise the temperature of a body of a material by 1˚C, independent of mass.\n",
-    "\n",
-    "$C=\\frac{E}{∆T}$ $J˚C^{-1}$\n",
-    "\n",
-    "where $∆T$ is the change in temperature.\n",
-    "\n",
-    "<b>Specific heat capacity (c)</b> is the energy needed to heat up 1kg of a material by 1˚C.\n",
-    "\n",
-    "$c=\\frac{E}{m∆T}$ $Jkg^{-1}˚C^{-1}$\n",
-    "\n",
-    "where m is the mass of the body of a material.\n",
-    "\n",
-    "Heat capacity of water >> ice > air > land."
    ]
   },
   {
@@ -204,11 +185,17 @@
     "\n",
     "$$S_o\\pi R_E^2(1-α)=4\\pi R_E^2εσT_K^{4}$$\n",
     "\n",
-    "Eliminating $\\pi$ and $R_E^2$ gives, and rearranging for $T_K$ gives:\n",
+    "Eliminating $\\pi$ and $R_E^2$: \n",
+    "\n",
+    "$$\\frac{1}{4}S_o(1-α)=εσT_K^{4}$$\n",
+    "\n",
+    "In the equation above, LHS gives <b>energy flux density into the Earth</b>, and RHS gives <b>energy flux density out of the Earth</b>.\n",
+    "\n",
+    "Rearranging for $T_K$ gives:\n",
     "\n",
     "$$T_K=(\\frac{S_o(1-α)}{4εσ})^{\\frac{1}{4}}$$\n",
     "\n",
-    "Note: ε must be between 0 and 1, it should be 0.62 for Earth's temperature to be 14˚C."
+    "Emissivity of the Earth is 0.62, with albedo of 0.3, its surface temperature becomes 14˚C. Therefore, the assumption that Earth's albedo is 0.3 is valid."
    ]
   },
   {
@@ -260,58 +247,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At least now the temperature obtained is much more sensible. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Greenhouse effect\n",
     "\n",
-    "Let's first use binomial expansion on the equation linking absolute temperature ($T_K$), temperature in degrees Celsius ($T_C$), and conversion constant from degrees Celsius to Kelvin ($T_o=273$).\n",
+    "Accounting for greenhouse effect, the temperature on Earth is calculated as following:\n",
     "\n",
-    "Recall that binomial expansion is $(1+x)^{n}≈(1+nx)$ when x<<1:\n",
-    "\n",
-    "$$T_K=(T_o+T_C)$$\n",
-    "\n",
-    "$$T_K^4=(T_o+T_C)^4=T_o^4(1+\\frac{T_C}{T_o})^{4}≈T_o^4(1+4\\frac{T_C}{T_o})$$\n",
-    "\n",
-    "Substitute $T_K$ into Stefan-Boltzmann Law:\n",
-    "\n",
-    "$$M_{out}=σT_K^{4}≈σ(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
-    "\n",
-    "In terms of total energy flux:\n",
-    "\n",
-    "$$E_{out}=σ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
-    "\n",
-    "Including emissivity:\n",
-    "\n",
-    "$$E_{out}=εσ4\\pi R_E^{2}(T_o^4(1+4\\frac{T_C}{T_o}))$$\n",
-    "\n",
-    "$$=4\\pi R_E^{2}(εσT_o^{4}+4εσT_o^{3}T_C)$$\n",
-    "\n",
-    "$$=4\\pi R_E^{2}(a+bT_C)$$\n",
+    "$$T_C=\\frac{\\frac{1}{4}S_o(1-α)-a}{b}$$\n",
     "\n",
     "where $a=εσT_o^{4}$ and $b=4εσT_o^{3}$ are constants.\n",
     "\n",
     "a is the constant coefficient for longwave radiation $= εσT_o^{4}$ $Wm^{-2}$\n",
     "\n",
-    "b is temperature-dependent coefficient for longwave radiation $= 4εσT_o^{3}$ $Wm^{-2}˚C^{-1}$\n",
-    "\n",
-    "Since $E_{in}=E_{out}$ at radiative equilibrium:\n",
-    "\n",
-    "$$S_o\\pi R_E^2(1-α)=4\\pi R_E^{2}(a+bT_C)$$\n",
-    "\n",
-    "$$S_o(1-α)=4(a+bT_c)$$\n",
-    "\n",
-    "$$\\frac{1}{4}S_o(1-α)=a+bT_c$$\n",
-    "\n",
-    "In the equation above, LHS gives <b>energy flux density into the Earth</b>, and RHS gives <b>energy flux density out of the Earth</b>.\n",
-    "\n",
-    "Rearrange for $T_C$ gives:\n",
-    "\n",
-    "$$T_C=\\frac{\\frac{1}{4}S_o(1-α)-a}{b}$$"
+    "b is temperature-dependent coefficient for longwave radiation $= 4εσT_o^{3}$ $Wm^{-2}˚C^{-1}$"
    ]
   },
   {
@@ -407,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can rewrite the equation above as:\n",
+    "From above, we know that $M_{in}=\\frac{1}{4}S_o(1-α)$, thus:\n",
     "\n",
     "$$T_C = \\frac{M_{in}-a}{b} = \\frac{M_{in}}{b}-\\frac{a}{b}$$\n",
     "\n",
@@ -415,7 +361,7 @@
     "\n",
     "$$∆T_C = \\frac{∆M_{in}}{b}$$\n",
     "\n",
-    "Therefore, the change in temperature is proportional to <b>radiative forcing</b>, the difference in energy flux density going in and out of the Earth. \n",
+    "Therefore, the change in temperature is proportional to <b>radiative forcing</b>, the difference in energy flux density. \n",
     "\n",
     "The radiative forcing associated with CO$_{2}$ gas of concentration [CO$_2$] compared to a base level concentration ot [CO$_2$]$_0$ can be approximated by:\n",
     "\n",
@@ -429,7 +375,7 @@
     "\n",
     "$$∆T_{CO2} = \\frac{3.7}{b}$$\n",
     "\n",
-    "The change in temperature from doubling concentration of CO$_2$ compared to pre-industrial levels is <b>climate sensibility</b>. \n",
+    "The change in temperature from doubling concentration of CO$_2$ compared to pre-industrial levels is <b>climate sensibility</b>, which leads to 1˚C of warming.\n",
     "\n",
     "Simplified approximations of radiative forcing caused by other greenhouse gases can be found in Table 3 in the paper __[Myhre et al.](https://en.wikipedia.org/wiki/Planck%27s_law)__\n"
    ]
@@ -515,35 +461,11 @@
    "source": [
     "## Restoring equilibrium\n",
     "\n",
-    "The __[first law of thermodynamics](https://en.wikipedia.org/wiki/First_law_of_thermodynamics)__ states that the total energy in an isolated system is constant.\n",
-    "\n",
-    "Treating the climate system as an isolated system, the rate of change in internal energy of the climate system must be balanced by the rate of net heating or cooling.\n",
-    "\n",
-    "From above, we derived that energy flux density absorbed $M_{in}=\\frac{1}{4}S_o(1-α)$, and energy flux density out $M_{out}=(a+bT_C)$, thus net heating/cooling is:\n",
-    "\n",
-    "$$M_{in}-M_{out}=\\frac{1}{4}S_o(1-α)-(a+bT_C)$$ \n",
-    "\n",
-    "The change in temperature per unit area per unit time is $C\\frac{dT}{dt}$ (verify this by units).\n",
-    "\n",
-    "Change in temperature is equivalent to change in kinetic energy i.e. internal energy of the system.\n",
-    "\n",
-    "Therefore:\n",
-    "\n",
-    "$$C\\frac{dT}{dt}=\\frac{1}{4}S_o(1-α)-(a+bT_C)$$\n",
-    "\n",
-    "$$\\frac{dT}{dt}=\\frac{\\frac{1}{4}S_o(1-α)-(a+bT_C)}{C}$$\n",
-    "\n",
-    "To simplify, since T_C is merely a specific value of T:\n",
-    "\n",
-    "$$\\frac{dT}{dt}=\\frac{\\frac{1}{4}S_o(1-α)-(a+bT)}{C}$$\n",
-    "\n",
-    "This equation accounts for the fact that when the system is out of equilibrium for whatever reason, it will try and restore equilibrium.\n",
-    "\n",
-    "Solving this differential equation gives:\n",
+    "After additional radiative forcings and change in energy flux density, the temperature on Earth changes to restore equilibrium. How temperature changes over time can be described by the following equation: \n",
     "\n",
     "$$T=\\frac{1}{b}(\\frac{1}{4}S_o(1-α)-a-CDe^{-\\frac{b}{c}t})=\\frac{1}{b}(M_{in}-a-CDe^{-\\frac{b}{c}t})$$\n",
     "\n",
-    "where D is an arbitrary constant determined by initial conditions:\n",
+    "where D is an arbitrary constant determined by initial temperature $T_{t=0}$:\n",
     "\n",
     "$$D=\\frac{\\frac{1}{4}S_o(1-α)-a-T_{t=0}b}{C}$$"
    ]
