--- a/_sources/mathematics/Timestepping_an_ODE.ipynb
+++ b/_sources/mathematics/Timestepping_an_ODE.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving (or *timestepping*) an ordinary differential equation (ODE)\n",
+    "# Solving (or \"timestepping\") an ordinary differential equation (ODE)\n",
     "\n",
     "## What do we mean by timestepping?\n",
     "\n",
@@ -291,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
