--- a/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -261,6 +261,53 @@
    "source": [
     "Both methods are valid so you can use whichever one suits you better!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Excercises\n",
+    "\n",
+    "1) Print the following:\n",
+    "\n",
+    "Veni vidi vici"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Print the following:\n",
+    "\n",
+    "First line\n",
+    "\n",
+    "Second line\n",
+    "\n",
+    "Third line\n",
+    "\n",
+    "         BOOM!\n",
+    "    \n",
+    "**HINT**: There is a '\\t' character which works like tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -279,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
