Excercises for printing done

--- a/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "### Excercises\n",
     "\n",
-    "1) Print the following:\n",
+    "1) **Print the following:**\n",
     "\n",
     "Veni vidi vici"
    ]
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Print the following:\n",
+    "2) **Print the following:**\n",
     "\n",
     "First line\n",
     "\n",
@@ -307,7 +307,83 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "3) Some characters in printing statements can be a bit tricky to handle. Think about the following:\n",
+    "\n",
+    "_\"John is a great fan of Shakespeare, so he decided to reference the famous \"Be of not the be?\" from 'The Hamlet' is his latest essay\"_\n",
+    "\n",
+    "This is makes the Python parser confused. We need to use the backslash e.g. \"\\'\" to make things specific. **Print the sentence from the example.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) **Printing can be art!** Use some characters to show your creativity! Try a triangle for example:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "     /\\  \n",
+    "    /  \\\n",
+    "   /    \\  \n",
+    "  /      \\  \n",
+    "  --------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**HINT**: What about printing the backslash?\n",
+    "\n",
+    "If you want more, google ASCII art, people can really go insane with those..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "        __  _-==-=_,-.\n",
+    "        /--`' \\_@-@.--<\n",
+    "        `--'\\ \\   <___/.  \n",
+    "             \\ \\\\   \" /  \n",
+    "              >=\\\\_/`<\n",
+    "  ____       /= |  \\_|/\n",
+    "_'    `\\   _/=== \\___/\n",
+    "`___/ //\\./=/~\\====\\\n",
+    "    \\   // /   | ===:\n",
+    "     |  ._/_,__|_ ==:        __\n",
+    "      \\/    \\\\ \\\\`--|       / \\\\\n",
+    "       |    _     \\\\:      /==:-\\\n",
+    "       `.__' `-____/       |--|==:\n",
+    "          \\    \\ ===\\      :==:`-'\n",
+    "          _>    \\ ===\\    /==/\n",
+    "         /==\\   |  ===\\__/--/\n",
+    "        <=== \\  /  ====\\ \\\\/\n",
+    "        _`--  \\/  === \\/--'\n",
+    "       |       \\ ==== |\n",
+    "        -`------/`--' /\n",
+    "                \\___-'\n"
+   ]
   }
  ],
  "metadata": {
