repair of the $ in the equations

--- a/notebooks/coding/Intro to Python/For_loops.ipynb
+++ b/notebooks/coding/Intro to Python/For_loops.ipynb
@@ -146,9 +146,9 @@
    "source": [
     "## Exercise:\n",
     "\n",
-    "Create a _for_ loop to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "Create a _for_ loop to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$"
+    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32)$$"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
